--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -7,6 +7,7 @@
   <ItemGroup>
     <!--<PackageVersion Include="FluentValidation" Version="11.11.0" />-->
     <PackageVersion Include="Injectio" Version="5.0.0" />
+    <PackageVersion Include="MediatR" Version="12.5.0" />
     <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="8.0.16" />
     <PackageVersion Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.5" />
     <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.6.2" />
