--- a/test/RequestDispatcher.Benchmark/RequestDispatcher.Benchmark.csproj
+++ b/test/RequestDispatcher.Benchmark/RequestDispatcher.Benchmark.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" />
+    <PackageReference Include="MediatR" />
   </ItemGroup>
 
   <ItemGroup>
