--- a/nuget.config
+++ b/nuget.config
@@ -3,6 +3,7 @@
 	<packageSources>
 		<clear />
 		<add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
+		<add key="MyNuget" value="D:\MyNuget" />
 	</packageSources>
 	<disabledPackageSources>
 		
